Changes for IZPACK-371 Memory options not transferred to sub process